# belphegor

./: .gitignore  CMakeLists.txt  README.md
cmake/: file_lists.cmake  get_thirdparty.cmake
data/logo/: logo.aseprite  logo_name.aseprite
example/: CMakeLists.txt  indev.cpp
include/belphegor/: log.hpp
src/belphegor/: engine.cppm  log.cpp  log.cppm
tools/: cog_files.py
